--- a/chatmaillf.html
+++ b/chatmaillf.html
@@ -1,3 +1,4 @@
+<title>MAILLF CHAT</title>
 <h1><strong><span style="color: #ff0000;">MAILLF Чат</span></strong></h1>
 <p><strong><span style="color: #ff9900;">Пишите Ваши сообщения, пишите другим пользователям, общайтесь</span></strong></p>
 <p><a href="https://maillf.github.io"><span style="color: #ff6600;">Перейти на главную страницу</span></a></p>
