--- a/indexmaillf.html
+++ b/indexmaillf.html
@@ -1,3 +1,4 @@
+<title>MAILLF</title>
 <h1><span style="color: #ff0000;">MAILLF</span></h1>
 <p><strong><span style="color: #ff0000;"><span style="color: #000000;">Выберите приложение</span></span></strong></p>
 <p><span style="color: #ff9900;"><strong><a style="color: #ff9900;" href="https://maillf.github.io/chat">Чат</a> <a style="color: #ff9900;" href="https://maillf.github.io/reddit">Реддит</a> <a style="color: #ff9900;" href="https://maillf.github.io/otvet">Ответы</a></strong></span></p>
