--- a/otvetmaillf.html
+++ b/otvetmaillf.html
@@ -1,3 +1,4 @@
+<title>MAILLF OTVETI</title>
 <h1><strong><span style="color: #ff0000;">MAILLF ќтветы</span></strong></h1>
 <p><span style="color: #ff9900;"><strong>«адавайте вопросы пользовател€м, и у нас их можно удал€ть бесплатно, а не за 30 руб)))</strong></span></p>
 <p><a href="https://maillf.github.io"><span style="color: #ff6600;">ѕерейти на главную страницу</span></a></p>
