--- a/redditmaillf.html
+++ b/redditmaillf.html
@@ -1,3 +1,4 @@
+<title>MAILLF REDDIT</title>
 <h1><strong><span style="color: #ff0000;">MAILLF Reddit</span></strong></h1>
 <p><span style="color: #ff9900;"><strong>—оздавайте обсуждени€, присоеден€йтесь к другим обсуждени€м, рассказывайте ¬аши истории</strong></span></p>
 <p><a href="https://maillf.github.io"><span style="color: #ff6600;">ѕерейти на главную страницу</span></a></p>
