--- a/otvetmaillf.html
+++ b/otvetmaillf.html
@@ -1,10 +1,10 @@
 <title>MAILLF OTVETI</title>
-<h1><strong><span style="color: #ff0000;">MAILLF Ответы</span></strong></h1>
-<p><span style="color: #ff9900;"><strong>Задавайте вопросы пользователям, и у нас их можно удалять бесплатно, а не за 30 руб)))</strong></span></p>
-<p><a href="https://maillf.github.io"><span style="color: #ff6600;">Перейти на главную страницу</span></a></p>
-<p><strong><span style="color: #ff0000;"><span style="color: #000000;">Выберите приложение</span></span></strong></p>
-<p><span style="color: #ff9900;"><strong><a style="color: #ff9900;" href="https://maillf.github.io/chat">Чат</a> <a style="color: #ff9900;" href="https://maillf.github.io/reddit">Реддит</a> <a style="color: #ff9900;" href="https://maillf.github.io/otvet">Ответы</a></strong></span></p>
-<p><strong><span style="color: #ff0000;"><span style="color: #000000;">MailLF.github.io</span></span></strong>
+<h1><span style="color: #ff0000;">MAILLF Otveti</span></h1>
+<h1><span style="color: #ff0000;"><img src="otvetiopisanie2.png" width="491" height="62" alt="" /></span></h1>
+<p><a href="https://batmangithuber.github.io/indexmaillf"><img src="ngs.png" width="284" height="32" alt="" /></a></p>
+<p><img src="viberiteprilozhenie2.png" width="527" height="74" alt="" /></p>
+<p><a href="https://batmangithuber.github.io/chatmaillf" title="MAILLF Chat"><img src="chat2.png" width="41" height="32" alt="" /></a><a href="https://batmangithuber.github.io/redditmaillf" title="MAILLF Reddit"><img src="reddit2.png" width="72" height="32" alt="" /></a><a href="https://batmangithuber.github.io/otvetmaillf" title="MAILLF Otvet"><img src="otveti2.png" width="86" height="32" alt="" /></a></p>
+<p><strong><span style="color: #ff0000;"><span style="color: #000000;">MailLF.github.io</span></span></strong></p>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
 <script type="text/javascript">
