--- a/chatmaillf.html
+++ b/chatmaillf.html
@@ -1,9 +1,9 @@
 <title>MAILLF CHAT</title>
-<h1><strong><span style="color: #ff0000;">MAILLF Чат</span></strong></h1>
-<p><strong><span style="color: #ff9900;">Пишите Ваши сообщения, пишите другим пользователям, общайтесь</span></strong></p>
-<p><a href="https://maillf.github.io"><span style="color: #ff6600;">Перейти на главную страницу</span></a></p>
-<p><strong><span style="color: #ff0000;"><span style="color: #000000;">Выберите приложение</span></span></strong></p>
-<p><strong><a href="https://maillf.github.io/chat">Чат</a> <a href="https://maillf.github.io/reddit">Реддит</a> <a href="https://maillf.github.io/otvet">Ответы</a></strong></p>
+<h1><span style="color: #ff0000;">MAILLF Chat</span></h1>
+<h1><span style="color: #ff0000;"><img src="chatopisanie2.png" width="656" height="74" alt="" /></span></h1>
+<p><a href="https://batmangithuber.github.io/indexmaillf"><img src="ngs.png" width="284" height="32" alt="" /></a></p>
+<p><img src="viberiteprilozhenie2.png" width="527" height="74" alt="" /></p>
+<p><a href="https://batmangithuber.github.io/chatmaillf" title="MAILLF Chat"><img src="chat2.png" width="41" height="32" alt="" /></a><a href="https://batmangithuber.github.io/redditmaillf" title="MAILLF Reddit"><img src="reddit2.png" width="72" height="32" alt="" /></a><a href="https://batmangithuber.github.io/otvetmaillf" title="MAILLF Otvet"><img src="otveti2.png" width="86" height="32" alt="" /></a></p>
 <p><strong><span style="color: #ff0000;"><span style="color: #000000;">MailLF.github.io</span></span></strong></p>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
