--- a/indexmaillf.html
+++ b/indexmaillf.html
@@ -1,7 +1,7 @@
 <title>MAILLF</title>
 <h1><span style="color: #ff0000;">MAILLF</span></h1>
-<p><strong><span style="color: #ff0000;"><span style="color: #000000;">Выберите приложение</span></span></strong></p>
-<p><span style="color: #ff9900;"><strong><a style="color: #ff9900;" href="https://maillf.github.io/chat">Чат</a> <a style="color: #ff9900;" href="https://maillf.github.io/reddit">Реддит</a> <a style="color: #ff9900;" href="https://maillf.github.io/otvet">Ответы</a></strong></span></p>
+<p><img src="viberiteprilozhenie2.png" width="527" height="74" alt="" /></p>
+<p><a href="https://batmangithuber.github.io/chatmaillf" title="MAILLF Chat"><img src="chat2.png" width="41" height="32" alt="" /></a><a href="https://batmangithuber.github.io/redditmaillf" title="MAILLF Reddit"><img src="reddit2.png" width="72" height="32" alt="" /></a><a href="https://batmangithuber.github.io/otvetmaillf" title="MAILLF Otvet"><img src="otveti2.png" width="86" height="32" alt="" /></a></p>
 <p><strong><span style="color: #ff0000;"><span style="color: #000000;">MailLF.github.io</span></span></strong></p>
 <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
 
